<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground">

    <com.lee.playandroid.base.widget.toolbar.TitleToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backIconTint="@color/colorThemeAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleColor="@color/colorThemeAccent"
        app:titleText="@string/square_create_share_title" />

    <TextView
        android:id="@+id/tv_share_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_offset"
        android:paddingStart="@dimen/large_offset"
        android:paddingEnd="@dimen/large_offset"
        android:text="@string/share_title_text"
        android:textColor="@color/colorThemeAccent"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_share_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/share_title_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxEms="100"
        android:paddingStart="@dimen/large_offset"
        android:paddingEnd="@dimen/large_offset"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_share_title" />

    <TextView
        android:id="@+id/tv_share_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_offset"
        android:paddingStart="@dimen/large_offset"
        android:paddingEnd="@dimen/large_offset"
        android:text="@string/share_content_text"
        android:textColor="@color/colorThemeAccent"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_share_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_share_content"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/share_content_hint"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:maxEms="100"
        android:paddingStart="@dimen/large_offset"
        android:paddingEnd="@dimen/large_offset"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_share_content" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/small_offset"
        android:paddingStart="@dimen/large_offset"
        android:paddingEnd="@dimen/large_offset"
        android:text="@string/share_description"
        android:textColor="@color/colorThemePrimary"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>